task: login with Google (OpenID version) using passport.js.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fast Delivery</title>
+    <title>Preview | Alchemy.js</title>
     <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
