--- a/views/partials/navbar-static.ejs
+++ b/views/partials/navbar-static.ejs
@@ -44,8 +44,10 @@
               
     <!--           <li><a href="../navbar-static-top/">Static top</a></li>
               <li><a href="../navbar-fixed-top/">Fixed top</a></li> -->
-             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">John Doe <b class="caret"></b></a>
+
+              <% if (user) { %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="<%= user.emails[0].value %>"> <%= user.displayName %> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   
 
@@ -57,9 +59,12 @@
                   <li class="divider"></li>
                   <li class="dropdown-header">User  </li>
                   <li><a href="#">Profile</a></li>
-                  <li><a href="#">Logout</a></li>
+                  <li><a href="/logout">Log Out</a></li>
                 </ul>
               </li>
+              <% } else { %>
+                  <li><a href="/auth/google">Log In</a></li>
+              <% }  %>
 
             </ul>
           </div><!--/.nav-collapse -->
