task: navbar items reorganzation.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Preview | Alchemy.js</title>
+    <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
