--- a/views/transfer_list.ejs
+++ b/views/transfer_list.ejs
@@ -25,7 +25,7 @@
           <tr>
               <td>4 Gen</td>
               <td>5,2</td>
-              <td>Primo, contorno e acqua @blink <a href="/project/3/location/blink">@blink</a></td>
+              <td>Primo, contorno e acqua <a href="/project/3/location/blink">@blink</a></td>
               <td><a href="/project/3/account/buoni-pasto">Buoni Pasto</a></td>
               <td><a href="/project/3/account/pranzi">Pranzi</a></td>
           </tr>
