--- a/views/partials/navbar-static.ejs
+++ b/views/partials/navbar-static.ejs
@@ -17,14 +17,20 @@
               
               <li><a href="/project/3/account/">Account</a></li>
               <li><a href="/project/3/transfer/">Transfer</a></li>
-              <li><a href="/project/3/location/">Location</a></li>
-              <li><a href="/project/3/hashtag/">Hashtag</a></li>
-              <li><a href="/project/3/analytics/">Analytics</a></li>
 
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/project/3/location/">Location</a></li>
+                  <li><a href="/project/3/hashtag/">Hashtag</a></li>
+                  <li><a href="/project/3/analytics/">Analytics</a></li>
+                </ul>
+              </li>
               
               
 
-<!--               <li class="dropdown">
+<!--               
+              <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="/project/1/">Project 1</a></li>
@@ -40,7 +46,7 @@
               <!-- <li class="active"><a>Project 1</a></li> -->
               <!-- <p class="navbar-text">Project 1</p> -->
 
-              <li><a href="/about/">About</a></li>
+              
               
     <!--           <li><a href="../navbar-static-top/">Static top</a></li>
               <li><a href="../navbar-fixed-top/">Fixed top</a></li> -->
@@ -56,9 +62,10 @@
                   <li><a href="/project/1">Project 1</a></li>
                   <li><a href="/project/2">Project 2</a></li>
 
-                  <li class="divider"></li>
                   <li class="dropdown-header">User  </li>
                   <li><a href="#">Profile</a></li>
+                  <li class="divider"></li>
+                  <li><a href="/about/">About</a></li>
                   <li><a href="/logout">Log Out</a></li>
                 </ul>
               </li>
