--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,10 @@
         <!-- <a href="/project/1/" class="btn btn-primary btn-lg">Start Now</a> -->
 
         <!-- Single button -->
-        <div class="btn-group">
+
+        <a href="/u/" class="btn btn-primary btn-lg">Start</a>
+
+<!--         <div class="btn-group">
           <button type="button" class="btn btn-primary btn-lg dropdown-toggle" data-toggle="dropdown">
             Start With <span class="caret"></span>
           </button>
@@ -31,7 +34,7 @@
             <li><a href="#">Create a New Project</a></li>
           </ul>
         </div>
-
+ -->
         <a href="/about/" class="btn btn-lg">Learn more</a>
       </p>
     </div>
