--- a/views/layout-spa.ejs
+++ b/views/layout-spa.ejs
@@ -7,16 +7,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    
-    <div class="container">
-      
-      <%-partial('partials/navbar-static') %> 
-
-      <%-body -%>
-
-      <%-partial('partials/footer') %> 
-
-    </div>
+  
+    <div id="layout"></div>  
 
     <script>
       var $ALCHEMY_USER = {
