--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,44 +1,11 @@
-<% layout('layout') -%>
+    <% layout('layout-spa') -%>
 
-<!--
-<div class="row">
-   <div class="col-md-12">
-    <div class="page-header">    
-      <h1><%= title %> <small>Welcome to <%= title %></small></h1>
-    </div>
-  </div> 
-  <div class="col-md-12">
-  -->
-    <div class="jumbotron">
-      <h1>Alchemy</h1>
-      <p>Alchemy has been rewritten in JavaScript.</p>
-      <p>
+    <script>
+      
+      require(['/js/app/config/common.js'], function (common) {
 
-        <!-- <a href="/project/1/" class="btn btn-primary btn-lg">Start Now</a> -->
+        require(['app/config/index']);
 
-        <!-- Single button -->
+      });
 
-        <a href="/u/" class="btn btn-primary btn-lg">Start</a>
-
-<!--         <div class="btn-group">
-          <button type="button" class="btn btn-primary btn-lg dropdown-toggle" data-toggle="dropdown">
-            Start With <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li class="dropdown-header">Your Projects</li>
-            <li><a href="/project/1/">Project 1</a></li>
-            <li><a href="/project/2/">Project 2</a></li>
-            <li class="dropdown-header">Other</li>
-            <li><a href="/project/sample/">Sample Project</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Create a New Project</a></li>
-          </ul>
-        </div>
- -->
-        <a href="/about/" class="btn btn-lg">Learn more</a>
-      </p>
-    </div>
-<!--     
-  </div>
-</div>
- -->
+    </script>
